--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"react": "~15.4.0-rc.4",
 		"react-native": "0.40.0",
 		"react-native-communications": "^2.2.1",
+		"react-native-maps": "^0.12.4",
 		"react-native-router-flux": "^3.37.0",
 		"react-redux": "^5.0.2",
 		"redux": "^3.6.0",
